@@ -1,7 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX shared-mime-info-0.60-parallel-make.patch 418 RMD160 e329a8abff7e730a5aba4582ff2a3e1d6f2b4112 SHA1 42542aeff7c5ac0efab1304fbf2c58da4a680ead SHA256 e0f07fa76db6fb4adaae295b15c089a6a0c290e46678160b687fd8d64f13fa0e
-DIST shared-mime-info-0.51.tar.bz2 445565 RMD160 9e0281f3bd9ac44af60833ec6b15af9f58936cc7 SHA1 4428b572e6d0fd1d8cf5d2f3eb887d7ab90e151f SHA256 1c247e03418d6b90bcbc0da6c1abe6ac9cd5bacf9c3a2f3b6105376cf7b0eed8
 DIST shared-mime-info-0.60.tar.bz2 457377 RMD160 b7f781b248c2dd65e51575502fe427f964866e65 SHA1 5c071da5a6fca3116ac39a1b06c10d52d85e37ec SHA256 a0d0a948fbb8d0de576876791d53efd1c5e8dd782eb9e5369cafc06c3969de22
-EBUILD shared-mime-info-0.51.ebuild 1317 RMD160 c1c9b754330a579637aaecd432d6122d02d332a3 SHA1 6a9a1a14998d53bcb47684b5195dcae35e213a82 SHA256 96ebbb23cc24c38d811549d4f7ecbcbaa45810fb891bcd669bbfacd8e02454a4
 EBUILD shared-mime-info-0.60.ebuild 1480 RMD160 1192df81bbaf298738e57b31119e99e074662517 SHA1 fe7b71364f865a84fd40168e84f433501704566c SHA256 27936fc03f6bd238ba54065b65f95cecc23f88c2735a0569008237e5e1f9bdbd
-MISC ChangeLog 19292 RMD160 bb03d31ebcb77f9897a006a9ab2f76338cd786a8 SHA1 bc435cf9a763cb8338efa2ba85d68b4d72ba3b98 SHA256 70591dfe0c3363aa730eb635f311a6ddc846936d9ff76ef96b2a63cfd015de21
+MISC ChangeLog 19403 RMD160 540c3b4022202178b7110a71375556a7ff2b533d SHA1 4d2ae1d8fe1d00b547dab936efda913a8bf408be SHA256 94f495bbcfcb73bf3ac7b7bd0006ea0d9dce153d60fdbd9e1c1d70e88b98ed74
 MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkpo6Y4ACgkQ1fmVwcYIWAa/aQCePH4RMzpoui7bCOpMqrCMtDIS
+HcAAoI1p24zxOjD1NTNLVdZNj+HXNPpA
+=hOT4
+-----END PGP SIGNATURE-----
